# style-guide

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
building/: index.html
building/build-script/: index.html
building/build-script/tasks/: index.html
building/getting-started/: index.html
building/properties/: index.html
building/structure/: index.html
docs/: dialogue_styling.md  editing.md  index.md  resources.md  shenanigans.md  songstyling.md  technical.md  timing.md
docs/building/: getting-started.md  index.md
docs/building/build-script/: index.md  tasks.md
docs/building/properties/: index.md
docs/building/structure/: index.md
docs/group/: distribution.md  roles.md
docs/guidelines/: editing.md  shenanigans.md  technical.md  timing.md  translation.md  typesetting.md
docs/guidelines/styling/: dialogue_styling.md  songstyling.md
docs/release/: description.md
group/distribution/: index.html
group/roles/: index.html
guidelines/editing/: index.html
guidelines/shenanigans/: index.html
guidelines/styling/dialogue_styling/: index.html
guidelines/styling/songstyling/: index.html
guidelines/technical/: index.html
guidelines/timing/: index.html
guidelines/translation/: index.html
guidelines/typesetting/: index.html
release/description/: index.html
resources/: index.html
search/: search_index.json
